--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color:#999;
+  font-weight:bold;
+  font-size:30px;
+  text-align:center;
+}
+
+
+#drum-machine{
+  border: 4px solid #fa0;
+  padding:5px;
+  background-color:#bbb;
+  width:50%;
+  border-radius: 12px;
+  margin:auto;
+}
+
+#powerButton{
+  color:blue;
+}
+
+#drum-pads{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row-gap: 15px;
+  grid-column-gap: 15px;
+  padding:20px;
+}
+
+.pads{
+    background-color: #999;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    border-radius: 12px;
+}
+
+button:active {
+  background-color:#fa0;
+}
+
+.controls{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column-gap: 20px;
+  padding:30px;
+}
+
+.grid-control{
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 2px solid #fa0;
+  font-size: 25px;
+  padding: 10px;
   text-align: center;
+  border-radius: 12px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
