--- a/src/App.css
+++ b/src/App.css
@@ -31,10 +31,12 @@ body {
   padding:20px;
 }
 
-.pads{
+.drum-pad{
     background-color: #999;
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 7px 7px 5px 0px rgba(0,0,0,0.75);
     border-radius: 12px;
+    font-weight:bold;
+    font-size:20px;
 }
 
 button:active {
